--- a/Restaurant Project/StorageApp/App.xaml
+++ b/Restaurant Project/StorageApp/App.xaml
@@ -2,8 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:StorageApp"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MVVM/View/MainWindowV.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="MVVM/View/Style/ColorPalette.xaml"/>
+                <ResourceDictionary Source="MVVM/View/Style/MainStyle.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
