--- a/Restaurant Project/StorageApp/MVVM/View/MainWindowV.xaml
+++ b/Restaurant Project/StorageApp/MVVM/View/MainWindowV.xaml
@@ -45,7 +45,7 @@
             </Grid>
         </Border>
         <!-- Content -->
-        <ContentControl Grid.Column="1" Grid.Row="0" Content="{Binding CurrentChildView}" d:Content=""/>
+        <ContentControl Grid.Column="1" Grid.Row="0" Content="{Binding CurrentChildView}" d:Content="{view:LogInV}"/>
         <!-- Bottom Panel -->
         <Border Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Style="{StaticResource BottomPanelBorder}">
             <StatusBar>
