Add Supplier View
add supplier view,
add delete supplier logic on button
add refresh supplier list logic on button

--- a/Restaurant Project/StorageApp/MVVM/View/Style/ColorPalette.xaml
+++ b/Restaurant Project/StorageApp/MVVM/View/Style/ColorPalette.xaml
@@ -9,4 +9,5 @@
     <SolidColorBrush x:Key="Azul" Color="#296EB4"/>
     <SolidColorBrush x:Key="SteelBlue" Color="#2D7AC8"/>
     <SolidColorBrush x:Key="BleuDeFrance" Color="#3785D2"/>
+    <SolidColorBrush x:Key="ImperialRed" Color="#EA484E"/>
 </ResourceDictionary>
