--- a/Restaurant Project/StorageApp/MVVM/View/Style/MainStyle.xaml
+++ b/Restaurant Project/StorageApp/MVVM/View/Style/MainStyle.xaml
@@ -9,6 +9,8 @@
         <Setter Property="FontSize" Value="12"/>
         <Setter Property="Foreground" Value="{StaticResource EerieBlack}"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="Padding" Value="0, 2"/>
+        <Setter Property="Margin" Value="5, 0, 0, 0"/>
     </Style>
     <Style TargetType="Separator">
         <Setter Property="BorderBrush" Value="DarkGray"/>
@@ -93,6 +95,12 @@
         <Setter Property="Margin" Value="20, 0, 0, 0"/>
         <Setter Property="Orientation" Value="Horizontal"/>
     </Style>
+    <Style x:Key="TabPanel" TargetType="StackPanel">
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="2"/>
+        <Setter Property="Orientation" Value="Horizontal"/>
+    </Style>
 
     <Style x:Key="LogInRectangle" TargetType="Rectangle">
         <Setter Property="VerticalAlignment" Value="Top"/>
@@ -165,6 +173,12 @@
         <Setter Property="Padding" Value="5"/>
         <Setter Property="Width" Value="150"/>
         <Setter Property="Margin" Value="0, 5"/>
+    </Style>
+    <Style x:Key="WhiteDockFormTextBox" TargetType="TextBox" BasedOn="{StaticResource FormTextBox}">
+        <Setter Property="Background" Value="{StaticResource AntiFlashWhite}"/>
+        <Setter Property="Margin" Value="0, 0, 20, 0"/>
+        <Setter Property="Width" Value="200"/>
+        <Setter Property="HorizontalAlignment" Value="Right"/>
     </Style>
 
     <Style x:Key="ConfirmFormButton" TargetType="Button">
@@ -256,6 +270,39 @@
             </Trigger>
         </Style.Triggers>
     </Style>
+    <Style x:Key="FormButton" TargetType="Button" BasedOn="{StaticResource DataGridActionButton}">
+        <Setter Property="Margin" Value="20, 2"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Style.Triggers>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Background" Value="{StaticResource UltraViolet}"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <Style x:Key="OptionFormButton" TargetType="Button">
+        <Setter Property="Margin" Value="5, 2"/>
+        <Setter Property="Width" Value="30"/>
+        <Setter Property="Background" Value="LightGray"/>
+        <Setter Property="Foreground" Value="{StaticResource AntiFlashWhite}"/>
+        <Setter Property="HorizontalAlignment" Value="Right"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}" CornerRadius="5" BorderBrush="{StaticResource EerieBlack}" BorderThickness="1">
+                        <fa:ImageAwesome Icon="{Binding Path=Tag, RelativeSource={RelativeSource AncestorType=Button}}" Foreground="{StaticResource UltraViolet}" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Cursor" Value="Hand"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Background" Value="{StaticResource AntiFlashWhite}"/>
+            </Trigger>
+        </Style.Triggers>
+    </Style>
 
     <Style x:Key="ErrorFormBlock" TargetType="TextBlock">
         <Setter Property="FontWeight" Value="Medium"/>
@@ -283,9 +330,41 @@
         <Setter Property="TextWrapping" Value="Wrap"/>
         <Setter Property="TextAlignment" Value="Center"/>
     </Style>
+    <Style x:Key="TabTextBlock" TargetType="TextBlock">
+        <Setter Property="FontFamily" Value="{StaticResource MainFont}"/>
+        <Setter Property="FontWeight" Value="Medium"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Foreground" Value="{Binding Path=Tag, RelativeSource={RelativeSource AncestorType=StackPanel}}"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
+        <Setter Property="TextAlignment" Value="Center"/>
+    </Style>
 
     <Style x:Key="HeaderIcon" TargetType="fa:ImageAwesome">
         <Setter Property="Margin" Value="10"/>
         <Setter Property="Foreground" Value="{Binding Path=Tag, RelativeSource={RelativeSource AncestorType=StackPanel}}"/>
+    </Style>
+    <Style x:Key="TabIcon" TargetType="fa:ImageAwesome">
+        <Setter Property="Margin" Value="5"/>
+        <Setter Property="Width" Value="20"/>
+        <Setter Property="Foreground" Value="{Binding Path=Tag, RelativeSource={RelativeSource AncestorType=StackPanel}}"/>
+    </Style>
+
+    <Style x:Key="StandartFormTabControl" TargetType="TabControl">
+        <Setter Property="Background" Value="{StaticResource PowderBlue}"/>
+        <Setter Property="BorderBrush" Value="{StaticResource EerieBlack}"/>
+        <Setter Property="Margin" Value="10, 5"/>
+        <Setter Property="BorderThickness" Value="2"/>
+        <Setter Property="Effect">
+            <Setter.Value>
+                <DropShadowEffect/>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="FormDockPanel" TargetType="DockPanel">
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <Setter Property="Margin" Value="0, 0, 0, 10"/>
     </Style>
 </ResourceDictionary>
