--- a/Restaurant Project/StorageApp/MVVM/View/WindowForm/WindowSupplierForm.xaml
+++ b/Restaurant Project/StorageApp/MVVM/View/WindowForm/WindowSupplierForm.xaml
@@ -20,7 +20,7 @@
             <RowDefinition Height="50"/>
         </Grid.RowDefinitions>
         <!-- Form Content -->
-        <TabControl Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Style="{StaticResource StandartFormTabControl}" DataContext="{Binding DataForm}">
+        <TabControl Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Style="{StaticResource StandartFormTabControl}" DataContext="{Binding FormModel}">
             <!-- Default data -->
             <TabItem>
                 <TabItem.Header>
@@ -89,6 +89,6 @@
             </TabItem>
         </TabControl>
         <Button Grid.Column="0" Grid.Row="1" Content="Confirm" Tag="{StaticResource SteelBlue}" Style="{StaticResource FormButton}" Command="{Binding ConfirmData}"/>
-        <Button Grid.Column="1" Grid.Row="1" Content="Cancel" Tag="{StaticResource ImperialRed}" Style="{StaticResource FormButton}" Command="{Binding CloseCommand}"/>
+        <Button Grid.Column="1" Grid.Row="1" Content="Cancel" Tag="{StaticResource EerieBlack}" Style="{StaticResource FormButton}" Command="{Binding CloseCommand}"/>
     </Grid>
 </Window>
