--- a/Restaurant Project/StorageApplication/MVVM/View/RecipeV.xaml
+++ b/Restaurant Project/StorageApplication/MVVM/View/RecipeV.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="StorageApplication.MVVM.View.ProductV"
+﻿<UserControl x:Class="StorageApplication.MVVM.View.RecipeV"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:fa="http://schemas.fontawesome.com/icons/"
              xmlns:view="clr-namespace:StorageApplication.MVVM.View"
-             xmlns:viewmodel="clr-namespace:StorageApplication.MVVM.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:ProductVM}"
+             xmlns:viewmodel="clr-namespace:StorageApplication.MVVM.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:RecipeVM}"
              mc:Ignorable="d" 
              d:DesignHeight="800" d:DesignWidth="1000" Background="{StaticResource AntiFlashWhite}">
     <UserControl.Resources>
@@ -18,9 +18,9 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Border Grid.Row="0" Style="{StaticResource LogoBorder}">
-            <StackPanel Orientation="Horizontal" Tag="{StaticResource ImperialRed}" Style="{StaticResource CenteredPanel}">
-                <fa:ImageAwesome Icon="Solid_Carrot" Style="{StaticResource HeaderIcon}"/>
-                <Label Content="Product panel" Style="{StaticResource HeaderLabel}"/>
+            <StackPanel Orientation="Horizontal" Tag="{StaticResource UltraViolet}" Style="{StaticResource CenteredPanel}">
+                <fa:ImageAwesome Icon="Solid_Receipt" Style="{StaticResource HeaderIcon}"/>
+                <Label Content="Recipe panel" Style="{StaticResource HeaderLabel}"/>
             </StackPanel>
         </Border>
         <Grid Grid.Row="1">
@@ -29,15 +29,16 @@
                 <ColumnDefinition Width="200"/>
                 <!-- Data Grid -->
                 <ColumnDefinition Width="*"/>
-                <!-- Buttons -->
+                <!-- Button Panel -->
                 <ColumnDefinition Width="75"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <!-- Search box -->
+                <!-- SearchBox -->
                 <RowDefinition Height="50"/>
-                <!-- Other -->
+                <!-- Data Grid -->
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+            <!-- Search Box -->
             <StackPanel Grid.Column="1" Grid.Row="0" Style="{StaticResource SearchBoxPanel}">
                 <TextBox Text="{Binding SearchBox, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource SearchBox}"/>
                 <Button Style="{StaticResource SearchButton}" Command="{Binding SearchData}"/>
@@ -52,15 +53,13 @@
             </ScrollViewer>
             <!-- Data Grid -->
             <ScrollViewer Grid.Column="1" Grid.Row="1" Style="{StaticResource DataGridScroll}">
-                <DataGrid ItemsSource="{Binding ProductList}">
+                <DataGrid ItemsSource="{Binding RecipeList}">
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="#" MinWidth="20" Width="auto" Binding="{Binding ProductID}"/>
-                        <DataGridTextColumn Header="Name" Width="*" Binding="{Binding ProductName}"/>
-                        <DataGridTextColumn Header="In Stock" Width="*" Binding="{Binding InStock}"/>
-                        <DataGridTextColumn Header="Unit" Width="75" Binding="{Binding UnitCode}"/>
-                        <DataGridTextColumn Header="Category" Width="*" Binding="{Binding CategoryName}"/>
-                        <DataGridTextColumn Header="Supplier" Width="*" Binding="{Binding SupplierCompanyName}"/>
-                        <DataGridTemplateColumn Header="Action" Width="2*">
+                        <DataGridTextColumn Header="#" MinWidth="20" Width="auto" Binding="{Binding RecipeID}"/>
+                        <DataGridTextColumn Header="Recipe name" Width="*" Binding="{Binding RecipeName}"/>
+                        <DataGridTextColumn Header="Category name" Width="*" Binding="{Binding CategoryName}"/>
+                        <DataGridTextColumn Header="Products" Width="80" Binding="{Binding Products}"/>
+                        <DataGridTemplateColumn Header="Action" Width="*">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Grid>
@@ -68,8 +67,8 @@
                                             <ColumnDefinition Width="*"/>
                                             <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
-                                        <Button Grid.Column="0" Content="Edit" Tag="{StaticResource UltraViolet}" Style="{StaticResource DataGridActionButton}" CommandParameter="{Binding}" Command="{Binding DataContext.EditProduct, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
-                                        <Button Grid.Column="1" Content="Delete" Tag="{StaticResource ImperialRed}" Style="{StaticResource DataGridActionButton}" CommandParameter="{Binding}" Command="{Binding DataContext.DeleteProduct, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
+                                        <Button Grid.Column="0" Content="Edit" Tag="{StaticResource UltraViolet}" Style="{StaticResource DataGridActionButton}" CommandParameter="{Binding}" Command="{Binding DataContext.EditRecipe, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
+                                        <Button Grid.Column="1" Content="Delete" Tag="{StaticResource ImperialRed}" Style="{StaticResource DataGridActionButton}" CommandParameter="{Binding}" Command="{Binding DataContext.DeleteRecipe, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
                                     </Grid>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
@@ -77,22 +76,18 @@
                     </DataGrid.Columns>
                 </DataGrid>
             </ScrollViewer>
-            <!-- Buttons -->
+            <!-- Button panel -->
             <StackPanel Grid.Column="2" Grid.Row="1">
                 <!-- Refresh -->
                 <Button Style="{StaticResource SideButton}" ToolTip="Refresh products" Command="{Binding RefreshData}">
                     <fa:ImageAwesome Icon="Regular_ArrowAltCircleDown" Style="{StaticResource SideButtonIcon}"/>
                 </Button>
-                <!-- Add product -->
-                <Button Style="{StaticResource SideButton}" ToolTip="Add product" Command="{Binding AddProduct}">
+                <!-- Add recipe -->
+                <Button Style="{StaticResource SideButton}" ToolTip="Add recipe" Command="{Binding AddRecipe}">
                     <fa:ImageAwesome Icon="Solid_Plus" Style="{StaticResource SideButtonIcon}"/>
                 </Button>
-                <!-- Modify measure unit -->
-                <Button Style="{StaticResource SideButton}" ToolTip="Modify units" Command="{Binding ModifyUnit}">
-                    <fa:ImageAwesome Icon="Solid_WineGlassAlt" Style="{StaticResource SideButtonIcon}"/>
-                </Button>
                 <!-- Modify category group -->
-                <Button Style="{StaticResource SideButton}" ToolTip="Modify categories" Command="{Binding ModifyCategory}">
+                <Button Style="{StaticResource SideButton}" ToolTip="Modify categories" Command="{Binding ModifyCategories}">
                     <fa:ImageAwesome Icon="Regular_ObjectGroup" Style="{StaticResource SideButtonIcon}"/>
                 </Button>
             </StackPanel>
